--- a/spring-boot-data-jpa/src/main/resources/messages.properties
+++ b/spring-boot-data-jpa/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
+# Validación cliente
 NotEmpty.cliente.nombre = El nombre del cliente es requerido
 Size.cliente.nombre= El nombre debe tener un tamaño entre 4 y 15 carácteres
 NotEmpty.cliente.apellido = El apellido del cliente es requerido
@@ -7,3 +8,6 @@ NotNull.cliente.createAt = La fecha no puede estar vacía
 
 # Mensaje para error de formato
 typeMismatch.cliente.createAt = La fecha debe tener el formato dd/MM/yyyy
+
+#Validación factura
+NotEmpty.factura.descripcion = La descripción es requerida
