--- a/spring-boot-data-jpa/src/main/resources/messages_de.properties
+++ b/spring-boot-data-jpa/src/main/resources/messages_de.properties
@@ -12,3 +12,10 @@ text.locale.de = Deutsche
 
 text.paginator.first = Zuerst 
 text.paginator.last = Letzte
+
+text.cliente.factura.factura = Nummer
+text.cliente.factura.descripcion = Beschreibung
+text.cliente.factura.fecha = Datum
+
+text.factura.ver.datos.cliente = Kundendaten
+text.factura.ver.datos.factura = Rechnungsdaten
