--- a/spring-boot-data-jpa/src/main/resources/messages_en.properties
+++ b/spring-boot-data-jpa/src/main/resources/messages_en.properties
@@ -12,3 +12,10 @@ text.locale.de = German
 
 text.paginator.first = First 
 text.paginator.last = Last
+
+text.cliente.factura.factura = Number
+text.cliente.factura.descripcion = Description
+text.cliente.factura.fecha = Date
+
+text.factura.ver.datos.cliente = Customer data
+text.factura.ver.datos.factura = Invoice data
