--- a/spring-boot-data-jpa/src/main/resources/messages_es.properties
+++ b/spring-boot-data-jpa/src/main/resources/messages_es.properties
@@ -26,3 +26,10 @@ text.locale.de = Alemán
 
 text.paginator.first = Primera 
 text.paginator.last = Última
+
+text.cliente.factura.factura = Factura
+text.cliente.factura.descripcion = Descripción
+text.cliente.factura.fecha = Fecha
+
+text.factura.ver.datos.cliente = Datos del cliente
+text.factura.ver.datos.factura = Datos de la factura
