Validación personalizada usando @Pattern

--- a/spring-boot-form/src/main/resources/messages.properties
+++ b/spring-boot-form/src/main/resources/messages.properties
@@ -1,4 +1,5 @@
 NotEmpty= El campo es requerido
+Pattern.usuario.identificador= El DNI no tiene un formato válido. La letra debe ir en mayúscula
 NotEmpty.usuario.username= El username es obligatorio
 NotEmpty.usuario.password= La contraseña no puede estar vacía
 Email.usuario.email= El correo tiene un formato incorrecto
