Registrar validador con @InitBinder

--- a/spring-boot-form/src/main/resources/messages.properties
+++ b/spring-boot-form/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
 NotEmpty= El campo es requerido
 Pattern.usuario.identificador= El DNI no tiene un formato válido. La letra debe ir en mayúscula
 NotEmpty.usuario.username= El username es obligatorio
+requerido.usuario.username= El username es requerido
 NotEmpty.usuario.password= La contraseña no puede estar vacía
 Email.usuario.email= El correo tiene un formato incorrecto
