--- a/spring-boot-form/src/main/resources/messages.properties
+++ b/spring-boot-form/src/main/resources/messages.properties
@@ -4,3 +4,5 @@ NotEmpty.usuario.username= El username es obligatorio
 requerido.usuario.username= El username es requerido
 NotEmpty.usuario.password= La contraseña no puede estar vacía
 Email.usuario.email= El correo tiene un formato incorrecto
+IdentificadorRegex.usuario.identificador= El identificador debe tener el formato ########-#
+Requerido.usuario.apellidos= El apellido es requerido
