--- a/spring-boot-form/src/main/resources/messages.properties
+++ b/spring-boot-form/src/main/resources/messages.properties
@@ -9,6 +9,7 @@ Requerido.usuario.apellidos= El apellido es requerido
 
 # Mensaje de error cuando el tipo del dato no coincida con el esperado
 typeMismatch.java.lang.Integer= Debe ser un número
+typeMismatch.java.util.Date= Debe ser una fecha con formato dd/MM/yyyy
 
 # Se puede modificar el mensaje para un campo específico
 typeMismatch.usuario.cuenta= Número de cuenta inválido
