Validación de fechas con input type

--- a/spring-boot-form/src/main/resources/messages.properties
+++ b/spring-boot-form/src/main/resources/messages.properties
@@ -6,10 +6,11 @@ NotEmpty.usuario.password= La contraseña no puede estar vacía
 Email.usuario.email= El correo tiene un formato incorrecto
 IdentificadorRegex.usuario.identificador= El identificador debe tener el formato ########-#
 Requerido.usuario.apellidos= El apellido es requerido
+Past.usuario.fechaNacimiento= Fecha de nacimiento inválida
 
 # Mensaje de error cuando el tipo del dato no coincida con el esperado
 typeMismatch.java.lang.Integer= Debe ser un número
-typeMismatch.java.util.Date= Debe ser una fecha con formato dd/MM/yyyy
+typeMismatch.java.util.Date= Debe ser una fecha con formato yyyy-MM-dd
 
 # Se puede modificar el mensaje para un campo específico
 typeMismatch.usuario.cuenta= Número de cuenta inválido
